--- a/_includes/documents-collection.html
+++ b/_includes/documents-collection.html
@@ -1,4 +1,4 @@
-{% assign entries = site[include.collection] %}
+{% assign entries = site[include.collection] | sort: "order" %}
 
 {% if include.sort_by == 'title' %}
   {% if include.sort_order == 'reverse' %}
